# f1_to_visual

./: README.md
install/: local_setup.sh  setup.sh
install/racing_car_pkg/share/racing_car_pkg/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/racing_car_pkg/share/racing_car_pkg/config/: car_view.rviz  my_view.rviz
install/racing_car_pkg/share/racing_car_pkg/launch/: car_launch.py  multi_car_launch.py  racing_launch.py
install/racing_car_pkg/share/racing_car_pkg/urdf/: car.urdf
install/racing_pkg/lib/racing_pkg/: car_node  track_publisher
install/racing_pkg/share/racing_pkg/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
src/racing_car_pkg/: package.xml  readme.txt  setup.cfg  setup.py
src/racing_car_pkg/config/: car_view.rviz  my_view.rviz
src/racing_car_pkg/launch/: car_launch.py  multi_car_launch.py  racing_launch.py
src/racing_car_pkg/urdf/: car.urdf
src/racing_pkg/: CMakeLists.txt  readme.txt
src/racing_pkg/config/: car_view.rviz
src/racing_pkg/include/racing_pkg/: car_node.hpp
src/racing_pkg/launch/: multi_car_launch.py
src/racing_pkg/path_ML/: traj_Monza.csv  traj_Monza_ML.csv
src/racing_pkg/path_ideal/: traj_Monza_TUM.csv
src/racing_pkg/path_real/: traj_Monza_lab10.csv  traj_Monza_realistic.csv
src/racing_pkg/src/: car_node.cpp  track_publisher.cpp
src/racing_pkg/urdf/: ML_path_car.urdf  TUM_path_car.urdf  real_path_car.urdf
(+22 files in other folders)
